Fixed misaligned Nav, caused by centering along main axis inside flex item

--- a/src/component/contentpage/contentpage.module.scss
+++ b/src/component/contentpage/contentpage.module.scss
@@ -21,7 +21,7 @@
                 transition: color 0.3s ease;
 
                 &:hover {
-                    color: rgb(150, 150, 160);
+                    color: rgb(150, 155, 180);
                 }
 
             }
